# WYGIWYH

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml  translations.yml
app/WYGIWYH/: settings.py  urls.py
app/apps/accounts/: forms.py  models.py  services.py  tests.py  urls.py
app/apps/api/: authentication.py  tests.py  urls.py
app/apps/common/: admin.py  apps.py  checks.py  forms.py  models.py  oauth_views.py  procrastinate.py  tasks.py  tests.py  views.py
app/apps/currencies/: forms.py  models.py  tasks.py
app/apps/dca/: forms.py  views.py
app/apps/export_app/: forms.py
app/apps/import_app/: forms.py
app/apps/insights/: forms.py  urls.py  views.py
app/apps/monthly_overview/: views.py
app/apps/net_worth/: urls.py  views.py
app/apps/rules/: forms.py  models.py  signals.py  tasks.py  urls.py  views.py
app/apps/transactions/: filters.py  forms.py  models.py  tasks.py  urls.py
app/apps/users/: adapters.py  forms.py  models.py  tests.py  urls.py  views.py
app/apps/yearly_overview/: urls.py  views.py
app/import_presets/qif_standard/: config.yml  manifest.json
app/templates/common/: placeholder.html
app/templates/crispy-daisyui/: accordion-group.html  accordion.html  betterform.html  display_form.html  errors.html  errors_formset.html  field.html  inputs.html  table_inline_formset.html  uni_form.html  uni_formset.html  whole_uni_form.html  (+1 more)
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: main.js
(+267 files in other folders)
